// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Combobox CustomValuesAllowed smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Fruits (custom values allowed)
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Select or type a fruit..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox Default smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <div class="relative">
      <input type="text"
             placeholder="Select a fruit..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox Disabled smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Disabled combobox
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Select or type..."
             disabled
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value="Apple"
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox FilteringExample smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Type to filter countries
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Start typing a country name..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox Large smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Large combobox
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Select..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-lg px-4 py-3"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox Loading smoke-test 1`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Loading combobox
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Loading options..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 animate-spin text-gray-400"
             fill="none"
             viewbox="0 0 24 24"
        >
          <circle class="opacity-25"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke="currentColor"
                  stroke-width="4"
          >
          </circle>
          <path class="opacity-75"
                fill="currentColor"
                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox ManyOptions smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Many options (scrollable)
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Type to filter options..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox NoCustomValues smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Select a country (no custom values)
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Choose from list only..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox Small smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Small combobox
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Select..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-sm px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox WithInitialValue smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Favorite fruit
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Select or type..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value="apple"
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Atoms/Combobox WithLabel smoke-test 2`] = `
<div class="w-80">
  <div class="relative w-full">
    <label class="block text-sm font-medium text-gray-700 mb-1">
      Choose your favorite fruit
    </label>
    <div class="relative">
      <input type="text"
             placeholder="Select a fruit..."
             class="w-full border border-gray-300 rounded-md shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 disabled:cursor-not-allowed text-base px-3 py-2"
             aria-expanded="false"
             aria-haspopup="listbox"
             aria-autocomplete="list"
             role="combobox"
             value
             style
      >
      <div class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
        <svg class="w-4 h-4 text-gray-400 transform transition-transform "
             fill="none"
             viewbox="0 0 24 24"
             stroke="currentColor"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                d="M19 9l-7 7-7-7"
          >
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
